[project]
name = "alcf-facility-api"
version = "0.1.0"
description = "Scripts to facilitate the generation of Globus access tokens for the ALCF Facility API"
authors = [{ name = "Benoit Cote", email = "bcote@anl.gov" }]
requires-python = ">=3.10.7"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "globus-sdk==4.4.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
